--- a/css/capmap.css
+++ b/css/capmap.css
@@ -65,9 +65,10 @@ html, body {
     padding: 5px;
     margin-bottom: 22px;
     z-index: 100;
+    max-width: 400px;
     position: absolute;
     bottom: 0;
-    left: calc(50% - 120px);
+    left: calc(50% - 200px);
 }
 
 @media only screen and (max-width: 500px) {
