--- a/css/capmap.css
+++ b/css/capmap.css
@@ -90,6 +90,30 @@ html, body {
     /* left: calc(50% - 130px); */
 }
 
+#map-legend-container {
+    width: 100%;
+    /* height: 30px; */
+    max-width: 400px; 
+    margin: 0 auto;
+}
+
+#map-legend {
+    background-color: rgba(254,254,254,0.7);
+    border: 2px solid #fff;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px rgba(0,0,0,.3);
+    padding: 5px;
+    margin-top: 22px;
+    margin-right: 22px;
+    z-index: 100;
+    width: 100%;
+    max-width: 300px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    /* left: calc(50% - 130px); */
+}
+
 @media only screen and (max-width: 500px) {
     #legend, #legend-container {
         max-width: 260px;
