--- a/css/capmap.css
+++ b/css/capmap.css
@@ -90,14 +90,14 @@ html, body {
     /* left: calc(50% - 130px); */
 }
 
-#map-legend-container {
+#icon-legend-container {
     width: 100%;
     /* height: 30px; */
     max-width: 400px; 
     margin: 0 auto;
 }
 
-#map-legend {
+#icon-legend {
     background-color: rgba(254,254,254,0.7);
     border: 2px solid #fff;
     border-radius: 3px;
@@ -111,7 +111,17 @@ html, body {
     position: absolute;
     top: 0;
     right: 0;
-    /* left: calc(50% - 130px); */
+}
+
+#icon-legend-header {
+    text-align: center;
+    font-size: 26px;
+    font-weight: bold;
+}
+
+#legend-icon-names {
+    margin-top: 5px;
+    width: 90%;
 }
 
 @media only screen and (max-width: 500px) {
