--- a/css/capmap.css
+++ b/css/capmap.css
@@ -231,3 +231,10 @@ html, body {
 #sentDate {
     text-align: center;
 }
+.color-square {
+    width: 20px;
+    height: 46px;
+    float: left;
+    margin-top: 2px;
+    border: 0.5px solid #000;
+}
