--- a/css/capmap.css
+++ b/css/capmap.css
@@ -18,6 +18,7 @@ html, body {
 }
 
 .controlDiv {
+    font-family: 'Times New Roman', Times, serif;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -214,5 +215,5 @@ html, body {
     float: left;
     margin-top: 2px;
     border: 0.5px solid #000;
-    background-color: #00FF00;
+    background-color: white;
 }
